# Grendel

./: .gitmodules  AUTHORS  Doxyfile  Makefile.am  README  config.h.in  configure.ac  getpyinclude  getpylib  getpyver  runme.sh  test.py.in
lib/: Makefile  Makefile.am  Makefile.in  PyRegExp.py  PyXML.py  defaults  derivs_2nd  derivs_3rd  derivs_4th  text.xml
src/: Doxyfile  Makefile  Makefile.am  Makefile.in  archive.cc  archive.h  class.h  constadd.py  coordinates.cc  coordinates.h  coordinates.hpp  defines.h  deftypes.h  derivative.cc  derivative.h  derivative.hpp  displacement.cc  displacement.h  displacement.hpp  exception.cc  exception.h  fileio.cc  fileio.h  fit.cc  fit.h  fit.hpp  fix.py  geometry.cc  geometry.h  geometry.hpp  gigide  gigide.h  gigide.hpp  gigmatrix.cc  gigmatrix.h  gigmatrix.hpp  hessian.cc  hessian.h  hessian.hpp  i.fit  (+81 more)
src/.deps/: archive.Po  coordinates.Po  derivative.Po  displacement.Po  exception.Po  fileio.Po  fit.Po  geometry.Po  gigmatrix.Po  hessian.Po  input.Po  keyword.Po  linalg.Po  main.Po  mathoperations.Po  matrix.Po  molecule.Po  optimize.Po  printstream.Po  pyregexp.Po  pyxml.Po  qff.Po  ref.Po  runtime.Po  serialize.Po  set.Po  symmetry.Po  taylor.Po  timer.Po  utilities.Po
src/anharm/: .makefile  Makefile  Makefile.am  Makefile.in  anharm.F  anhasy.F  anhdia.F  anhlib.F  anhlin.F  anhsph.F  anhsym.F
src/html/: annotated.html  class_create_fit__i-members.html  class_create_fit__i.html  class_create_fit__ij-members.html  class_create_fit__ij.html  class_create_fit__ijk-members.html  class_create_fit__ijk.html  class_create_fit__ijkl-members.html  class_create_fit__ijkl.html  class_fit__i-members.html  class_fit__i.html  class_fit__i__d3-members.html  class_fit__i__d3.html  class_fit__ii-members.html  class_fit__ii.html  class_fit__ii__d3-members.html  class_fit__ii__d3.html  class_fit__iii-members.html  class_fit__iii.html  class_fit__iiii-members.html  class_fit__iiii.html  class_fit__iiij-members.html  class_fit__iiij.html  class_fit__iij-members.html  class_fit__iij.html  class_fit__iijj-members.html  class_fit__iijj.html  class_fit__iijk-members.html  class_fit__iijk.html  class_fit__ij-members.html  class_fit__ij.html  class_fit__ij__d3-members.html  class_fit__ij__d3.html  class_fit__ijk-members.html  class_fit__ijk.html  class_fit__ijkl-members.html  class_fit__ijkl.html  class_index_i-members.html  class_index_i.html  class_index_j-members.html  (+292 more)
src/intder/: Makefile.am  intder.f
test-suite/ammonia/simples_c1_0_4/: .CHECK  data.xml  fc.xml  file16  file21  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp
test-suite/ammonia/simples_c1_2_4/: .CHECK  data.xml  fc.xml  file11  file12  file16  file21  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output.dat_correct
test-suite/ammonia/simples_c3v_0_4/: .CHECK  data.xml  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output.dat_correct
test-suite/ammonia/simples_c3v_2_4/: .CHECK  data.xml  fc.xml  file11  file12  file16  file21  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output.dat_correct
test-suite/ammonia/symms_c3v_0_4/: .CHECK  check  data.xml  fc.xml  file16  file21  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output.dat_correct
test-suite/ammonia/symms_c3v_2_4/: .CHECK  data.xml  fc.xml  file11  file12  file16  file21  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output.dat_correct
test-suite/be4/: data.xml  intdif.inp  output.dat_correct
test-suite/c3h2/: data.xml  intdif.inp  output.dat_correct
test-suite/water/simples_c1_1_4/: data.xml  file11  file16  file21  gigide.out  gigide.xml  intder.out  intdif.inp  output  psi.32
test-suite/water/simples_c1_2_4/: data.xml  fc.xml  file11  file21  file25  gigide.out  gigide.xml  intder.inp  intdif.inp
test-suite/water/simples_c2v_0_4/: .CHECK  data.xml  dispcart  fc.xml  file16  file21  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output  output.dat_correct
test-suite/water/simples_c2v_1_4/: .CHECK  data.xml  fc.xml  file12  file25  gigide.out  gigide.xml  intder.inp  intdif.inp  output.dat_correct
test-suite/water/simples_c2v_2_4/: .CHECK  data.xml  file11  file12  file16  gigide.out  gigide.xml  intder.out  intdif.inp  output.dat_correct
test-suite/water/symms_c2v_0_4/: .CHECK  data.xml  dispcart  fc.xml  file16  file21  file25  gigide.out  gigide.xml  intder.inp  intder.out  intdif.inp  output.dat_correct  test.out  valcheck
