bin_PROGRAMS=gigide
gigide_SOURCES=serialize.cc pyxml.cc coordinates.cc molecule.cc main.cc fileio.cc qff.cc keyword.cc pyregexp.cc utilities.cc hessian.cc taylor.cc fit.cc input.cc geometry.cc symmetry.cc exception.cc printstream.cc ref.cc gigmatrix.cc set.cc displacement.cc runtime.cc optimize.cc derivative.cc timer.cc archive.cc
INCLUDES = $(DEPS_CFLAGS)
LDADD = $(DEPS_LIBS)
